--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
+
+    <!-- Document Title -->
     <title>React Spreadsheet Editor</title>
-    <meta name="description" content="React Spreadsheet Editor" />
+    <meta name="description" content="A powerful React-based spreadsheet editor for web applications." />
     <meta name="author" content="Moses Aweda" />
 
-    <!-- TODO: Update og:title to match your application name -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="React Spreadsheet Editor" />
-    <meta property="og:description" content="React Spreadsheet Editor" />
+    <meta property="og:description" content="A powerful React-based spreadsheet editor for web applications." />
     <meta property="og:type" content="website" />
- 
 
+    <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@mosysdev" />
- 
+    <meta name="twitter:creator" content="@mosys_dev" />
+    <meta name="twitter:site" content="@mosys_dev" />
+    <meta name="twitter:title" content="React Spreadsheet Editor" />
+    <meta name="twitter:description" content="A powerful React-based spreadsheet editor for web applications." />
+
+    <!-- Favicon (optional, if you have one) -->
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
   </head>
 
   <body>
